apps/devops-app/overlays/dev/vap-bind-max-replicas.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: max-replicas
spec:
  policyName: max-replicas
  validationActions: [Warn]
  paramRef:
    name: max-replicas
    parameterNotFoundAction: Deny
  matchResources:
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: devops-app
    objectSelector:
      matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
        - devops-app-backend
        - devops-app-frontend
